--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
   </div>
 
   <script>
- function updateCountdown() {
- 
+function updateCountdown() {
   const gameDate = new Date("November 8, 2025 12:00:00");
   const now = new Date();
   const timeDiff = gameDate - now;
@@ -69,7 +68,11 @@
 
   const days = Math.floor(timeDiff / (1000 * 60 * 60 * 24));
   const hours = Math.floor((timeDiff / (1000 * 60 * 60)) % 24);
+  const minutes = Math.floor((timeDiff / (1000 * 60)) % 60);
+  const seconds = Math.floor((timeDiff / 1000) % 60);
 
+  document.getElementById("timer").innerHTML =
+    `${days}d ${hours}h ${minutes}m ${seconds}s`;
 }
 
 // Start the countdown
